# pymongoexplain

./: .travis.yml  README.rst  changelog.rst  pyproject.toml  setup.py  version.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dist-python.yml  release-python.yml  test.yml
pymongoexplain/: __init__.py  __main__.py  commands.py  explainable_collection.py  utils.py  version.py
test/: __init__.py  test_cli_tool_script.py  test_collection.py  test_crud_v2.py  testscript.py  utils.py  utils_spec_runner.py
